fix cursor z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,7 +179,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 60;
+  z-index: 120;
   pointer-events: none;
   opacity: 0;
   width: 30px;
